--- a/.gitignore
+++ b/.gitignore
@@ -1,66 +1,19 @@
-# History files
+# R history and data files
 .Rhistory
-.Rapp.history
-
-# Session Data files
 .RData
-
-# User-specific files
-.Ruserdata
+.Rproj.user/
 
 # RStudio files
 .Rproj.user/
 .Rproj/
-.Rproj.user/
+.Ruserdata
 
-# Packages
-.Renviron
-.Rprofile
-
-# Compiled C++ files
-*.o
-*.so
-*.dll
-
-# MacOS files
+# macOS specific files
 .DS_Store
 .AppleDouble
 .LSOverride
 
-# Thumbnails
-._*
-
-# Icon must end with two \r
-Icon\r\r
-
-# Apple files
+# macOS metadata files
 .Spotlight-V100
 .Trashes
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-# Logs and temporary files
-*.log
-*.out
-*.tmp
-
-# CSV and data files (optional, if you want to ignore specific data)
-# Uncomment the following lines if you want to exclude data files
-#*.csv
-#data/*.csv
-
-# Python virtual environments (if you have Python scripts in your project)
-__pycache__/
-*.py[cod]
-*.egg
-*.egg-info/
-dist/
-build/
-
-# R markdown cache
-.Rmd.cache/
-.Rmd.swp
 
